force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/OnStar_Auth__c/OnStar_Auth__c.object-meta.xml
<CustomObject>
    <label>OnStar_Auth</label>
    <nameField>
        <label>OnStar_Auth Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OnStar_Auths</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>