force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/OnStar_Auth__c/fields/Access_Token__c.field-meta.xml
<CustomField>
    <fullName>Access_Token__c</fullName>
    <label>Access_Token</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>