force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/OnStar_Auth__c/fields/Auth_Code__c.field-meta.xml
<CustomField>
    <fullName>Auth_Code__c</fullName>
    <label>Auth Code</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>