force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/OnStar_Auth__c/fields/GM_Id__c.field-meta.xml
<CustomField>
    <fullName>GM_Id__c</fullName>
    <label>GM_Id</label>
    <length>10</length>
    <type>Text</type>
</CustomField>