force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/OnStar_Auth__c/fields/UserID__c.field-meta.xml
<CustomField>
    <fullName>UserID__c</fullName>
    <externalId>true</externalId>
    <label>UserID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>